# keycode-parser

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
keycode/: __init__.py  __main__.py  cli.py  parsers.py
keycode_parser/: __init__.py  boot.py  cli.py  codeparsers.py  io.py  main.py  models.py  parsers.py  regex.py  sources.py  test_boot.py  types.py  utils.py
tests/: en.json  input.pseudo.py
tests/globs/: t1.ts
tests/globs/inner/: t4.ts
